# cpp-pinyin

./: .clang-format  CMakeLists.txt  README.md  cpp-pinyin.pc.in  cpp-pinyinConfig.cmake.in
.github/workflows/: ci.yml
cmake/: winrc.cmake
docs/: Custom Chinese Dialect.md
include/: ChineseG2p.h  G2pglobal.h  Jyutping.h  Pinyin.h  PinyinRes.h  ToneConverter.h
include/cpp-pinyin/: CanTone.h  ChineseG2p.h  G2pglobal.h  Jyutping.h  ManTone.h  Pinyin.h  PinyinGlobal.h  PinyinRes.h  StringUtil.h  ToneConverter.h  U16Str.h  U32Str.h
res/dict/cantonese/: phrases_dict.txt  phrases_map.txt  trans_word.txt  word.txt
res/dict/mandarin/: phrases_dict.txt  phrases_map.txt  trans_word.txt  user_dict.txt  word.txt
src/: ChineseG2p.cpp  ChineseG2p_p.h  DictUtil.cpp  DictUtil.h  G2pglobal.cpp  Jyutping.cpp  Pinyin.cpp  PinyinRes.cpp  StringUtil.cpp  StringUtil.h  ToneConverter.cpp  U16Str.cpp  U32Str.cpp
src/toneUtil/: CanTone.cpp  ManTone.cpp  ManToneUtil.cpp  ManToneUtil.h
src/util/: CanTone.cpp  CanTone.h  ManTone.cpp  ManTone.h  ManToneUtil.cpp  ManToneUtil.h
tests/: CMakeLists.txt  Common.cpp  Common.h  JyuptingTest.cpp  JyuptingTest.h  ManTest.cpp  ManTest.h  main.cpp
tests/testData/: jyutping_test.txt  jyutping_untone_test.txt  op_lab.txt
